src/components/AsideHeader/components/CompositeBar/CompositeBar.scss
@use '../../../variables';

$block: '.#{variables.$ns}composite-bar';

#{$block} {
    $class: &;

    flex: 1 1 auto;
    width: 100%;
    min-height: 40px;
    display: flex;
    flex-direction: column;
    --gn-aside-header-item-expanded-radius: 6px;

    & &__root-menu-item[class] {
        background-color: transparent;
    }

    &__menu-group-item,
    &__menu-group-header,
    &__root-menu-item[class] {
        margin-bottom: 2px;

        &:last-child {
            margin-bottom: 0;
        }
    }

    &_scrollable {
        flex: 1 1 auto;
        overflow-y: auto;
        scrollbar-width: none;
        -ms-overflow-style: none;

        &::-webkit-scrollbar {
            display: none;
        }
    }

    &__root-menu-item {
        &:has(#{$class}__menu-group) {
            align-items: flex-start;

            > .g-list__item-sort-icon {
                top: 12px;
                position: relative;
            }

            .g-list__item-content {
                overflow: visible;
            }
        }
    }

    &__menu-group {
        width: 100%;
        height: 100%;
        position: relative;

        &:before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            z-index: -1;
            border-left: 2px solid var(--g-color-line-generic);
            border-radius: 0;
            transition: border-radius 0.15s ease-out;
        }

        &:hover,
        &_expanded {
            &:before {
                border-radius: var(--gn-aside-header-item-expanded-radius);
            }
        }
    }

    &__menu-group-header,
    &__menu-group-item {
        height: 36px;
    }

    &__menu-group-item {
        position: relative;

        width: calc(100% + 16px);

        &_edit {
            left: -16px;
        }
    }

    &__menu-group-toggle,
    &__menu-group-toggle-placeholder {
        width: 24px;
        height: 24px;
        display: inline-flex;
        align-items: center;
        cursor: pointer;
    }

    &__menu-group-toggle {
        margin-left: auto;
    }

    &__menu-group-icon {
        margin-right: var(--g-spacing-3);
    }
}

